--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser-sync": "^2.26.5",
     "gulp": "^4.0.2",
     "gulp-imagemin": "^5.0.3",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2"
   }
 }
