--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-imagemin": "^5.0.3",
     "gulp-inject-string": "^1.1.2",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "puppeteer": "^1.17.0"
   }
 }
