--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "browser-sync": "^2.26.5",
     "gulp": "^4.0.2",
+    "gulp-css-replace-url": "^0.2.4",
     "gulp-imagemin": "^5.0.3",
     "gulp-inject-string": "^1.1.2",
     "gulp-replace": "^1.0.0",
