--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "puppeteer": "^1.17.0"
+  },
+  "devDependencies": {
+    "gulp-cache": "^1.1.2"
   }
 }
